roles/nginx_test/files/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: test
spec:
  selector:
    matchLabels:
      app: nginx-test
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/lib/nginx-test
          name: nginx-test
      restartPolicy: Always
      # securityContext:
      #   fsGroup: 1000
      volumes:
      - name: nginx-test
        persistentVolumeClaim:
          claimName: nginx-test-pvc
